# vigil

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cli.py  config.py  digest.py  hourly.py  inspect.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
analyzer/: __init__.py  code_reader.py  collector.py  deduplicator.py  parser.py  state_manager.py
integrations/: github.py
llm/: __init__.py  base.py  claude.py  ollama.py
reporting/: renderer.py
reporting/templates/: digest.html  index.html
storage/: __init__.py  db.py  models.py
tests/: test_code_reader.py  test_deduplicator.py  test_llm.py  test_parser.py  test_trends.py
