[project]
name = "vigil"
version = "0.1.0"
description = "Automated log analysis and error digest for FastAPI backend"
requires-python = ">=3.11"

dependencies = [
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
    "anthropic>=0.84.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyzer", "llm", "storage", "reporting"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
